--- a/TODO
+++ b/TODO
@@ -12,7 +12,8 @@
                                                 ____________________________________________________________
 
 
-Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight [Not sure if this is going to be a command or a global feature].
+Copy paste of text doesn't work bug in custom ReadLine function.
+Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight
 Python's virtual env doesn't work with AOs. Fix it.
 olor - Changes your PC's theme from Dark mode to Light mode.
 wlpr, wallpaper - Changes your PC's wallpaper.
