--- a/TODO
+++ b/TODO
@@ -12,15 +12,11 @@
                                                 ____________________________________________________________
 
 
-Copy paste of text doesn't work bug in custom ReadLine function.
 Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight
 Python's virtual env doesn't work with AOs. Fix it.
 olor - Changes your PC's theme from Dark mode to Light mode.
 wlpr, wallpaper - Changes your PC's wallpaper.
-msoffice - Automate creation and management via any of MS Office tool. (Not sure if I want to implement it or not)
-autokey - Automate keyboard or mouse keys to perform any task requiring interaction keyboard or mouse. (Not sure if I want to implement it or not)
 displaysettings - Change your display settings directly from the command line
-srz - Summarize any text or text file using a simple summarization algorithm.
 updos - Update your operating system directly from command line.
 scrn - Take Screenshot
 
@@ -30,6 +26,7 @@ scrn - Take Screenshot
                                                             ##################################################
 
 
+. Copy paste of text doesn't work bug in custom ReadLine function.
 . The "shutdown" command won't shutdown the host machine. Also check if the "restart" commands has the same problem or not.
 . Autocomplete filenames when pressed tab.
 . settings - print everything from setting.json except cmds.
@@ -55,6 +52,9 @@ scrn - Take Screenshot
                                                             ##################################################
 
 
+x msoffice - Automate creation and management via any of MS Office tool. (Not sure if I want to implement it or not)
+x autokey - Automate keyboard or mouse keys to perform any task requiring interaction keyboard or mouse. (Not sure if I want to implement it or not)
+x srz - Summarize any text or text file using a simple summarization algorithm.
 x powertoy - run a file from the 'PowerToys' folder without checking for similar executable files in the current folder.
 x Make AOs launch with windows terminal using from a batch file. (ask the use to change default terminal application from windows console host to windows terminal if windows terminal is installed).
 x Use "Python.Runtime" module in C# for better connection between C# and Python code.
