--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@
                                                             ###################### DONE ######################
                                                             ##################################################
 
+A lot of bugs in custom ReadLine's autocomplete suggestion. Fix them all.
 
 . Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight
 . Copy paste of text doesn't work bug in custom ReadLine function.
