C#'s class inheritance is horrible and doesn't work as intended at all.

--- a/TODO
+++ b/TODO
@@ -18,9 +18,9 @@
                                                             ##################################################
 
 A lot of bugs in custom ReadLine's autocomplete suggestion. Fix them all.
-If the string is too long that a new line is being created then it fails to do that and crashes. Fix it.
-Delete history.json from 'Files.x72\root' folder from source.
 
+. If the string is too long that a new line is being created then it fails to do that and crashes. Fix it.
+. Delete history.json from 'Files.x72\root' folder from source.
 . Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight
 . Copy paste of text doesn't work bug in custom ReadLine function.
 . The "shutdown" command won't shutdown the host machine. Also check if the "restart" commands has the same problem or not.
