Great progress. Still some bugs to fix.
Rendering issue when pressing space still persists.

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@
                                                             ###################### DONE ######################
                                                             ##################################################
 
+Rewrite README with more details about AOs and how to use it documentation.
 A lot of bugs in custom ReadLine's autocomplete suggestion. Fix them all.
 
 . If the string is too long that a new line is being created then it fails to do that and crashes. Fix it.
