--- a/TODO
+++ b/TODO
@@ -17,8 +17,11 @@
                                                             ###################### DONE ######################
                                                             ##################################################
 
+Lexer is also broken, fix it. Quick.
+Implement a faster and better search algo
 Rewrite README with more details about AOs and how to use it documentation.
 A lot of bugs in custom ReadLine's autocomplete suggestion. Fix them all.
+Another bug in ReadLine, when the scroll wheel appears after a long text being printed, then the ReadLine function fails to work.
 
 . If the string is too long that a new line is being created then it fails to do that and crashes. Fix it.
 . Delete history.json from 'Files.x72\root' folder from source.
