--- a/TODO
+++ b/TODO
@@ -17,8 +17,10 @@
                                                             ###################### DONE ######################
                                                             ##################################################
 
+Use warner-ficher algo in autocomplete suggestion for better completion.
 Rewrite README with more details about AOs and how to use it documentation.
 
+. Custom ReadLine doesn't take input when it's at the bottom of the command line. Fix it.
 . A lot of bugs in custom ReadLine's autocomplete suggestion. Fix them all.
 . Implement a faster and better search algo
 . Another bug in ReadLine, when the scroll wheel appears after a long text being printed, then the ReadLine function fails to work.
